# GDC-Cvent-TAP

./: README.md  meltano.yml  pyproject.toml  test_output.jsonl  tox.ini
.github/workflows/: build.yml  test.yml
tap_cvent/: __main__.py  auth.py  client.py  streams.py  tap.py
